# gwavetool

./: .notar  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  bootstrap.sh  configure.ac  configure.in
sfnet/: README
sfnet/htdocs/: index.html
src/: Makefile.am  Makefile.handmade  app.c  app.cc  app.h  base.cc  base.h  dlgabout.c  dlgabout.cc  dlgabout.h  dlgnew.c  dlgnew.h  frame.c  frame.cc  frame.h  gwavetool.h  main.c  main.cc  main.h  menus.cc  menus.h  menus.rc  options.cc  options.h  statusbar.c  statusbar.cc  statusbar.h  toolbox.cc  toolbox.h  wave.c  wave.cc  wave.h  waveview.c  waveview.cc  waveview.h
tools/: rcrc.pl
ui/: gwavetool.glade
